--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html,body{
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: #6d6d6d80;
+	background: #f04f32;
 	transition: all 0.5s ease;
 	display: none;
   }
@@ -53,7 +53,7 @@ html,body{
   }
   .bttn1
   {
-	background-color: #3a3732;
+	background: #f04f32;
 	color:#fc8516;
   }
   .sendbtn
